# project-spotlight

./: .gitignore  Makefile  README.md  pyproject.toml
src/: app.py
